Fix many spacing issues
Has no personality. Maybe come back and make this my own at some point

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     --button-color: #3883F6;
 }
 
+
+
 a{
     text-decoration: none;
     color: var(--secondary-text);
@@ -14,7 +16,26 @@ a{
 img{
     width: 200px;
     height: auto;
+    background-color: var(--secondary-text);
 }
+
+button{
+    background-color: var(--button-color);
+    border: 2px solid var(--button-color);
+    border-radius: 8px;
+    color: var(--main-text);
+    padding: 4px 15px;
+}
+
+.action button{
+    border: 2px solid var(--main-text);
+    align-self: center;
+}
+
+.website > * {
+    padding: 0 15vw;
+}
+
 
 .header{
     background-color: var(--dark-background-color);  
@@ -67,18 +88,41 @@ h3{
     border-radius: 10px;
 }
 
+.info-row p{
+    color: var(--dark-background-color);
+    text-align: center;
+}
+
 .quote{
-    background-color: var(--secondary-text);
-    padding: 25px;
+    background-color: var(--secondary-text);   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+}
+
+.quote p{
+    margin: 0;
+    width: 40vw;
+    font-style: italic;
+    color: var(--dark-background-color);
 }
 
 .action{
     background-color: var(--button-color);
     color: var(--main-text);
+    margin: 10vh 10vw;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .action p{
     color: var(--secondary-text);
+}
+
+h4{
+    margin-bottom: 2px;
 }
 
 .footer{
@@ -92,11 +136,14 @@ h3{
     text-align: center;
 }
 
-body{
-    /* margin: auto; */
-    margin: 0
+html, body{
+    margin: 0;
+    overscroll-behavior: none;
+    font-family: 'Roboto';
+    /* background-color: var(--dark-background-color); */
 }
 
-/* body div{
+/* THIS ALSO WORKS BUT IS KINDA WEIRD LOOKING
+body > div > *{
     padding: 0 10vw;
 } */
